fix gap on sidemenu/footer area

--- a/react-app-starter/src/styles/components/_nav.scss
+++ b/react-app-starter/src/styles/components/_nav.scss
@@ -89,6 +89,7 @@
     }
 
     @media (min-width: $tablet) {
+        position: fixed;
         transform: initial;
         width: 200px;
         height: 100vh;
